objects/Assignment_Groups__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <description>If True, then include user in Round Robin assignments.</description>
        <inlineHelpText>If False, then include user in Round Robin assignments.</inlineHelpText>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>True</fullName>
                    <default>true</default>
                    <label>True</label>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>B2C_SFDC_Id__c</fullName>
        <externalId>true</externalId>
        <label>B2C SFDC Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Name__c</fullName>
        <label>Group Name</label>
        <referenceTo>Assignment_Group_Name__c</referenceTo>
        <relationshipName>Assignment_Groups</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Last_Assignment__c</fullName>
        <description>Last time case was assigned to this person</description>
        <inlineHelpText>Last time case was assigned to this person</inlineHelpText>
        <label>Last Assignment</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Millisecond__c</fullName>
        <label>Millisecond</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>IMAGE( 
CASE(User_Active__c &amp; IF(ISPICKVAL(Active__c,&quot;True&quot;)=True,&quot;True&quot;,&quot;False&quot;), 
&quot;TrueTrue&quot;, &quot;/img/samples/light_green.gif&quot;,
&quot;/img/samples/light_red.gif&quot;), 
&quot;status color&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If Status and User Status are True</inlineHelpText>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Active__c</fullName>
        <formula>if(User__r.Assignment_Group_Active__c=True,
     IF( User__r.IsActive=True,&quot;True&quot;,&quot;False&quot;) ,
     &quot;False&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>True if &quot;Assignment Group Active&quot; and &quot;Active&quot; fields on the user record are checked.  If True the users is available for this and all Assignment Groups.</inlineHelpText>
        <label>User Active</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N30000002Yj6ZEAS</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>